# streamly-process

./: .gitignore  .hlint.yaml  .packcheck.ignore  .travis.yml  CHANGELOG.md  LICENSE  NOTICE  README.md  appveyor.yml  cabal.project  cabal.project.Werror  cabal.project.ci  default.nix  hie.yaml  stack.yaml  streamly-process.cabal
.github/workflows/: haskell.yml
Benchmark/System/: Process.hs
cabal.project.d/: master  streamly-0.10.0  streamly-0.9.0
design/: proposal.md
src/: DocTestCommand.hs  DocTestProcess.hs
src/Streamly/Internal/: System.hs
src/Streamly/Internal/System/: Command.hs  Process.hs
src/Streamly/Internal/System/Process/: Posix.hs
src/Streamly/System/: Command.hs  Process.hs  Utility.hs
test/Streamly/System/: Process.hs
test/data/: writeTrToError.bat  writeTrToError.sh
