cabal-version:       2.2
name:                streamly-process
version:             0.1.0.0
synopsis:            Stream Interfaces For System Processes
description:
  Streamly is a framework for writing programs in a high level, declarative
  data flow programming paradigm. It provides a simple API, very close to
  standard Haskell lists.
  .
  This package allows us to extract streams from Processes
  .
homepage:            https://github.com/composewell/streamly-process
bug-reports:         https://github.com/composewell/streamly-process/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ahmed Zaheer Dadarkar
maintainer:          streamly@composewell.com
copyright:           Composewell Technologies
category:            Control, Concurrency, Streaming, Processes
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  ghc-options: -Wall
  hs-source-dirs: src
  build-depends:
      streamly
    , base              >= 4.8   && < 5
    , process           >= 1.0   && < 1.7
    , transformers      >= 0.4 && < 0.6
    , exceptions        >= 0.8   && < 0.11
  exposed-modules:
                      Streamly.System.Process
  default-language: Haskell2010

-------------------------------------------------------------------------------
-- Benchmarks
-------------------------------------------------------------------------------

benchmark process-bench
  type: exitcode-stdio-1.0
  hs-source-dirs: Benchmark/System
  main-is: Process.hs
  build-depends:
      streamly-process
    , streamly
    , base              >= 4.8   && < 5
    , process           >= 1.0   && < 1.7
    , transformers      >= 0.4   && < 0.6
    , directory         >= 1.2.2 && < 1.4
    , gauge             >= 0.2.4 && < 0.3

  default-language: Haskell2010

-------------------------------------------------------------------------------
-- Test Suites
-------------------------------------------------------------------------------

test-suite system-process-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test/Streamly/System
  main-is: Process.hs
  build-depends:
      streamly-process
    , streamly
    , base              >= 4.8   && < 5
    , process           >= 1.0   && < 1.7
    , directory         >= 1.2.2 && < 1.4
    , hspec             >= 2.0   && < 3
    , QuickCheck        >= 2.10  && < 2.15

  default-language: Haskell2010
