cabal-version:       2.2
name:                streamly-process
version:             0.1.0.0
synopsis:            Stream Interfaces For System Processes
description:
  Streamly is a framework for writing programs in a high level, declarative
  data flow programming paradigm. It provides a simple API, very close to
  standard Haskell lists.
  .
  This package allows us to extract streams from Processes
  .
homepage:            https://github.com/composewell/streamly-process
bug-reports:         https://github.com/composewell/streamly-process/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Composewell Technologies
maintainer:          streamly@composewell.com
copyright:           Composewell Technologies
category:            Control, Concurrency, Streaming, Processes
build-type:          Simple
extra-source-files:
    .github/workflows/haskell.yml
    .gitignore
    .hlint.yaml
    appveyor.yml
    stack.yaml
    CHANGELOG.md
    README.md
    NOTICE
    cabal.project.ci
    design/proposal.md

library
  ghc-options:
                -Wall
                -Wcompat
                -Wunrecognised-warning-flags
                -Widentities
                -Wincomplete-record-updates
                -Wincomplete-uni-patterns
                -Wredundant-constraints
                -Wnoncanonical-monad-instances

  hs-source-dirs: src
  build-depends:
      streamly          >= 0.7.1 && < 0.8
    , primitive         >= 0.5.4 && < 0.8
    , base              >= 4.8   && < 5
    , process           >= 1.0   && < 1.7
    , transformers      >= 0.4 && < 0.6
    , exceptions        >= 0.8   && < 0.11
  exposed-modules:
                      Streamly.System.Process
  default-language: Haskell2010

-------------------------------------------------------------------------------
-- Benchmarks
-------------------------------------------------------------------------------

benchmark process-bench
  type: exitcode-stdio-1.0
  hs-source-dirs: Benchmark/System
  main-is: Process.hs
  ghc-options: -O2 -fspec-constr-recursive=16 -fmax-worker-args=16 -threaded
  build-depends:
      streamly-process
    , streamly          >= 0.7.1 && < 0.8
    , base              >= 4.8   && < 5
    , process           >= 1.0   && < 1.7
    , transformers      >= 0.4   && < 0.6
    , directory         >= 1.2.2 && < 1.4
    , gauge             >= 0.2.4 && < 0.3

  default-language: Haskell2010

-------------------------------------------------------------------------------
-- Test Suites
-------------------------------------------------------------------------------

test-suite system-process-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test/Streamly/System
  main-is: Process.hs
  ghc-options: -threaded
  build-depends:
      streamly-process
    , streamly          >= 0.7.1 && < 0.8
    , base              >= 4.8   && < 5
    , process           >= 1.0   && < 1.7
    , transformers      >= 0.4   && < 0.6
    , directory         >= 1.2.2 && < 1.4
    , hspec             >= 2.0   && < 3
    , QuickCheck        >= 2.10  && < 2.15
    , exceptions        >= 0.8   && < 0.11

  default-language: Haskell2010
